cockroachlabs-preview-main/docs/v25.4/essential-metrics-self-hosted.mdx
---
title: "Essential Metrics for CockroachDB Self-Hosted Deployments"
old_description: "Learn about the recommended essential metrics for monitoring your CockroachDB self-hosted cluster."
---

These essential CockroachDB metrics let you monitor your CockroachDB self-hosted cluster. Use them to build custom dashboards with the following tools:

- [Grafana](/docs/v25.4/monitor-cockroachdb-with-prometheus#step-5-visualize-metrics-in-grafana)
- [Datadog Integration](/docs/v25.4/datadog): The [**Datadog Integration Metric Name**](https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics) column lists the corresponding Datadog metric which requires the `cockroachdb.` prefix.

The **Usage** column explains why each metric is important to visualize and how to make both practical and actionable use of the metric in a production deployment.

## Platform

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>sys.cpu.combined.percent-normalized</code><br/></td><td><code>sys.cpu.combined.percent.normalized</code></td><td>Current user+system cpu percentage consumed by the CRDB process, normalized 0-1 by number of cores</td><td>This metric gives the CPU utilization percentage by the CockroachDB process. If it is equal to 1 (or 100%), then the CPU is overloaded. The CockroachDB process should not be running with over 80% utilization for extended periods of time (hours). This metric is used in the DB Console CPU Percent graph.</td></tr><tr><td><code>sys.cpu.host.combined.percent-normalized</code><br/></td><td><code>sys.cpu.host.combined.percent&#95;normalized</code></td><td>Current user+system cpu percentage across the whole machine, normalized 0-1 by number of cores</td><td>This metric gives the CPU utilization percentage of the underlying server, virtual machine, or container hosting the CockroachDB process. It includes CPU usage from both CockroachDB and non-CockroachDB processes. It also accounts for time spent processing hardware (irq) and software (softirq) interrupts, as well as nice time, which represents low-priority user-mode activity.<br/><br/>A value of 1 (or 100%) indicates that the CPU is overloaded. Avoid running the CockroachDB process in an environment where the CPU remains overloaded for extended periods (e.g. multiple hours). This metric appears in the DB Console on the Host CPU Percent graph.</td></tr><tr><td><code>sys.cpu.sys.percent</code><br/></td><td><code>sys.cpu.sys.percent</code></td><td>Current system cpu percentage consumed by the CRDB process</td><td>This metric gives the CPU usage percentage at the system (Linux kernel) level by the CockroachDB process only. This is similar to the Linux top command output. The metric value can be more than 1 (or 100%) on multi-core systems. It is best to combine user and system metrics.</td></tr><tr><td><code>sys.cpu.user.percent</code><br/></td><td><code>sys.cpu.user.percent</code></td><td>Current user cpu percentage consumed by the CRDB process</td><td>This metric gives the CPU usage percentage at the user level by the CockroachDB process only. This is similar to the Linux top command output. The metric value can be more than 1 (or 100%) on multi-core systems. It is best to combine user and system metrics.</td></tr><tr><td><code>sys.host.disk.iopsinprogress</code><br/></td><td><code>sys.host.disk.iopsinprogress</code></td><td>IO operations currently in progress on this host (as reported by the OS)</td><td>This metric gives the average queue length of the storage device. It characterizes the storage device's performance capability. All I/O performance metrics are Linux counters and correspond to the avgqu-sz in the Linux iostat command output. You need to view the device queue graph in the context of the actual read/write IOPS and MBPS metrics that show the actual device utilization. If the device is not keeping up, the queue will grow. Values over 10 are bad. Values around 5 mean the device is working hard trying to keep up. For internal (on chassis) NVMe devices, the queue values are typically 0. For network connected devices, such as AWS EBS volumes, the normal operating range of values is 1 to 2. Spikes in values are OK. They indicate an I/O spike where the device fell behind and then caught up. End users may experience inconsistent response times, but there should be no cluster stability issues. If the queue is greater than 5 for an extended period of time and IOPS or MBPS are low, then the storage is most likely not provisioned per Cockroach Labs guidance. In AWS EBS, it is commonly an EBS type, such as gp2, not suitable as database primary storage. If I/O is low and the queue is low, the most likely scenario is that the CPU is lacking and not driving I/O. One such case is a cluster with nodes with only 2 vcpus which is not supported sizing for production deployments. There are quite a few background processes in the database that take CPU away from the workload, so the workload is just not getting the CPU. Review storage and disk I/O.</td></tr><tr><td><code>sys.host.disk.read.bytes</code><br/></td><td><code>sys.host.disk.read.bytes</code></td><td>Bytes read from all disks since this process started (as reported by the OS)</td><td>This metric reports the effective storage device read throughput (MB/s) rate. To confirm that storage is sufficiently provisioned, assess the I/O performance rates (IOPS and MBPS) in the context of the sys.host.disk.iopsinprogress metric.</td></tr><tr><td><code>sys.host.disk.read.count</code><br/></td><td><code>sys.host.disk.read.count</code></td><td>Disk read operations across all disks since this process started (as reported by the OS)</td><td>This metric reports the effective storage device read IOPS rate. To confirm that storage is sufficiently provisioned, assess the I/O performance rates (IOPS and MBPS) in the context of the sys.host.disk.iopsinprogress metric.</td></tr><tr><td><code>sys.host.disk.write.bytes</code><br/></td><td><code>sys.host.disk.write.bytes</code></td><td>Bytes written to all disks since this process started (as reported by the OS)</td><td>This metric reports the effective storage device write throughput (MB/s) rate. To confirm that storage is sufficiently provisioned, assess the I/O performance rates (IOPS and MBPS) in the context of the sys.host.disk.iopsinprogress metric.</td></tr><tr><td><code>sys.host.disk.write.count</code><br/></td><td><code>sys.host.disk.write.count</code></td><td>Disk write operations across all disks since this process started (as reported by the OS)</td><td>This metric reports the effective storage device write IOPS rate. To confirm that storage is sufficiently provisioned, assess the I/O performance rates (IOPS and MBPS) in the context of the sys.host.disk.iopsinprogress metric.</td></tr><tr><td><code>sys.host.net.recv.bytes</code><br/></td><td><code>sys.host.net.recv.bytes</code></td><td>Bytes received on all network interfaces since this process started (as reported by the OS)</td><td>This metric gives the node's ingress/egress network transfer rates for flat sections which may indicate insufficiently provisioned networking or high error rates. CockroachDB is using a reliable TCP/IP protocol, so errors result in delivery retries that create a "slow network" effect.</td></tr><tr><td><code>sys.host.net.send.bytes</code><br/></td><td><code>sys.host.net.send.bytes</code></td><td>Bytes sent on all network interfaces since this process started (as reported by the OS)</td><td>This metric gives the node's ingress/egress network transfer rates for flat sections which may indicate insufficiently provisioned networking or high error rates. CockroachDB is using a reliable TCP/IP protocol, so errors result in delivery retries that create a "slow network" effect.</td></tr><tr><td><code>sys.rss</code><br/></td><td><code>sys.rss</code></td><td>Current process RSS</td><td>This metric gives the amount of RAM used by the CockroachDB process. Persistently low values over an extended period of time suggest there is underutilized memory that can be put to work with adjusted settings for --cache or --max&#95;sql&#95;memory or both. Conversely, a high utilization, even if a temporary spike, indicates an increased risk of Out-of-memory (OOM) crash (particularly since the swap is generally disabled).</td></tr><tr><td><code>sys.runnable.goroutines.per.cpu</code><br/></td><td><code>sys.runnable.goroutines.per.cpu</code></td><td>Average number of goroutines that are waiting to run, normalized by number of cores</td><td>If this metric has a value over 30, it indicates a CPU overload. If the condition lasts a short period of time (a few seconds), the database users are likely to experience inconsistent response times. If the condition persists for an extended period of time (tens of seconds, or minutes) the cluster may start developing stability issues. Review CPU planning.</td></tr><tr><td><code>sys.uptime</code><br/></td><td><code>sys.uptime</code></td><td>Process uptime</td><td>This metric measures the length of time, in seconds, that the CockroachDB process has been running. Monitor this metric to detect events such as node restarts, which may require investigation or intervention.</td></tr></tbody></table>

## Storage

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>admission.io.overload</code><br/></td><td><code>admission.io.overload</code></td><td>1-normalized float indicating whether IO admission control considers the store as overloaded with respect to compaction out of L0 (considers sub-level and file counts).</td><td>If the value of this metric exceeds 1, then it indicates overload. You can also look at the metrics <code>storage.l0-num-files</code>, <code>storage.l0-sublevels</code> or <code>rocksdb.read-amplification</code> directly. A healthy LSM shape is defined as "read-amp &lt; 20" and "L0-files &lt; 1000", looking at cluster settings <code>admission.l0&#95;sub&#95;level&#95;count&#95;overload&#95;threshold</code> and <code>admission.l0&#95;file&#95;count&#95;overload&#95;threshold</code> respectively.</td></tr><tr><td><code>capacity</code><br/></td><td><code>capacity.total</code></td><td>Total storage capacity</td><td>This metric gives total storage capacity. Measurements should comply with the following rule: CockroachDB storage volumes should not be utilized more than 60% (40% free space).</td></tr><tr><td><code>capacity.available</code><br/></td><td><code>capacity.available</code></td><td>Available storage capacity</td><td>This metric gives available storage capacity. Measurements should comply with the following rule: CockroachDB storage volumes should not be utilized more than 60% (40% free space).</td></tr><tr><td><code>capacity.used</code><br/></td><td><code>capacity.used</code></td><td>Used storage capacity</td><td>This metric gives used storage capacity. Measurements should comply with the following rule: CockroachDB storage volumes should not be utilized more than 60% (40% free space).</td></tr><tr><td><code>rocksdb.block.cache.hits</code><br/></td><td><code>rocksdb.block.cache.hits</code></td><td>Count of block cache hits</td><td>This metric gives hits to block cache which is reserved memory. It is allocated upon the start of a node process by the <code>--cache</code> flag and never shrinks. By observing block cache hits and misses, you can fine-tune memory allocations in the node process for the demands of the workload.</td></tr><tr><td><code>rocksdb.block.cache.misses</code><br/></td><td><code>rocksdb.block.cache.misses</code></td><td>Count of block cache misses</td><td>This metric gives misses to block cache which is reserved memory. It is allocated upon the start of a node process by the <code>--cache</code> flag and never shrinks. By observing block cache hits and misses, you can fine-tune memory allocations in the node process for the demands of the workload.</td></tr><tr><td><code>rocksdb.compactions</code><br/></td><td><code>rocksdb.compactions</code></td><td>Number of table compactions</td><td>This metric reports the number of a node's LSM compactions. If the number of compactions remains elevated while the LSM health does not improve, compactions are not keeping up with the workload. If the condition persists for an extended period, the cluster will initially exhibit performance issues that will eventually escalate into stability issues.</td></tr><tr><td><code>storage.wal.fsync.latency</code><br/></td><td><code>storage.wal.fsync.latency.count</code></td><td>The fsync latency to the Write-Ahead Log device.</td><td>If this value is greater than 100ms, it is an indication of a disk stall. To mitigate the effects of disk stalls, consider deploying your cluster with WAL failover configured. When WAL failover is configured, the more relevant metric is storage.wal.failover&#95;write&#95;and&#95;sync.latency, as this metric reflects the fsync latency of the primary and/or the secondary WAL device.</td></tr><tr><td><code>storage.write-stalls</code><br/></td><td><code>storage.write.stalls</code></td><td>Number of instances of intentional write stalls to backpressure incoming writes</td><td>This metric reports actual disk stall events. Ideally, investigate all reports of disk stalls. As a pratical guideline, one stall per minute is not likely to have a material impact on workload beyond an occasional increase in response time. However one stall per second should be viewed as problematic and investigated actively. It is particularly problematic if the rate persists over an extended period of time, and worse, if it is increasing.</td></tr></tbody></table>

## Health

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>admission.wait&#95;durations.kv</code><br/></td><td><code>admission.wait&#95;durations.kv.count</code></td><td>Wait time durations for requests that waited</td><td>This metric shows if CPU utilization-based admission control feature is working effectively or potentially overaggressive. This is a latency histogram of how much delay was added to the workload due to throttling. If observing over 100ms waits for over 5 seconds while there was excess capacity available, then the admission control is overly aggressive.</td></tr><tr><td><code>admission.wait&#95;durations.kv-stores</code><br/></td><td><code>admission.wait&#95;durations.kv&#95;stores.count</code></td><td>Wait time durations for requests that waited</td><td>This metric shows if I/O utilization-based admission control feature is working effectively or potentially overaggressive. This is a latency histogram of how much delay was added to the workload due to throttling. If observing over 100ms waits for over 5 seconds while there was excess capacity available, then the admission control is overly aggressive.</td></tr></tbody></table>

## Network

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>clock-offset.meannanos</code><br/></td><td><code>clock.offset.meannanos</code></td><td>Mean clock offset with other nodes</td><td>This metric gives the node's clock skew. In a well-configured environment, the actual clock skew would be in the sub-millisecond range. A skew exceeding 5 ms is likely due to a NTP service mis-configuration. Reducing the actual clock skew reduces the probability of uncertainty related conflicts and corresponding retires which has a positive impact on workload performance. Conversely, a larger actual clock skew increases the probability of retries due to uncertainty conflicts, with potentially measurable adverse effects on workload performance.</td></tr><tr><td><code>rpc.connection.avg&#95;round&#95;trip&#95;latency</code><br/></td><td><code>rpc.connection.avg&#95;round&#95;trip&#95;latency</code></td><td>Sum of exponentially weighted moving average of round-trip latencies, as measured through a gRPC RPC.<br/><br/>Since this metric is based on gRPC RPCs, it is affected by application-level processing delays and CPU overload effects. See rpc.connection.tcp&#95;rtt for a metric that is obtained from the kernel's TCP stack.<br/><br/>Dividing this Gauge by rpc.connection.healthy gives an approximation of average latency, but the top-level round-trip-latency histogram is more useful. Instead, users should consult the label families of this metric if they are available (which requires prometheus and the cluster setting 'server.child&#95;metrics.enabled'); these provide per-peer moving averages.<br/><br/>This metric does not track failed connection. A failed connection's contribution is reset to zero.</td><td>This metric is helpful in understanding general network issues outside of CockroachDB that could be impacting the user’s workload.</td></tr><tr><td><code>rpc.connection.failures</code><br/></td><td><code>rpc.connection.failures.count</code></td><td>Counter of failed connections.<br/><br/>This includes both the event in which a healthy connection terminates as well as unsuccessful reconnection attempts.<br/><br/>Connections that are terminated as part of local node shutdown are excluded. Decommissioned peers are excluded.</td><td>See Description.</td></tr><tr><td><code>rpc.connection.healthy</code><br/></td><td><code>rpc.connection.healthy</code></td><td>Gauge of current connections in a healthy state (i.e. bidirectionally connected and heartbeating)</td><td>See Description.</td></tr><tr><td><code>rpc.connection.healthy&#95;nanos</code><br/></td><td><code>rpc.connection.healthy&#95;nanos</code></td><td>Gauge of nanoseconds of healthy connection timeOn the prometheus endpoint scraped with the cluster setting 'server.child&#95;metrics.enabled' set, the constituent parts of this metric are available on a per-peer basis and one can read off for how long a given peer has been connected</td><td>This can be useful for monitoring the stability and health of connections within your CockroachDB cluster.</td></tr><tr><td><code>rpc.connection.heartbeats</code><br/></td><td><code>rpc.connection.heartbeats.count</code></td><td>Counter of successful heartbeats.</td><td>See Description.</td></tr><tr><td><code>rpc.connection.tcp&#95;rtt</code><br/></td><td>NOT AVAILABLE</td><td>Kernel-level TCP round-trip time as measured by the Linux TCP stack.<br/><br/>This metric reports the smoothed round-trip time (SRTT) as maintained by the kernel's TCP implementation. Unlike application-level RPC latency measurements, this reflects pure network latency and is less affected by CPU overload effects.<br/><br/>This metric is only available on Linux.</td><td>High TCP RTT values indicate network issues outside of CockroachDB that could be impacting the user's workload.</td></tr><tr><td><code>rpc.connection.tcp&#95;rtt&#95;var</code><br/></td><td>NOT AVAILABLE</td><td>Kernel-level TCP round-trip time variance as measured by the Linux TCP stack.<br/><br/>This metric reports the smoothed round-trip time variance (RTTVAR) as maintained by the kernel's TCP implementation. This measures the stability of the connection latency.<br/><br/>This metric is only available on Linux.</td><td>High TCP RTT variance values indicate network stability issues outside of CockroachDB that could be impacting the user's workload.</td></tr><tr><td><code>rpc.connection.unhealthy</code><br/></td><td><code>rpc.connection.unhealthy</code></td><td>Gauge of current connections in an unhealthy state (not bidirectionally connected or heartbeating)</td><td>If the value of this metric is greater than 0, this could indicate a network partition.</td></tr><tr><td><code>rpc.connection.unhealthy&#95;nanos</code><br/></td><td><code>rpc.connection.unhealthy&#95;nanos</code></td><td>Gauge of nanoseconds of unhealthy connection time.On the prometheus endpoint scraped with the cluster setting 'server.child&#95;metrics.enabled' set, the constituent parts of this metric are available on a per-peer basis and one can read off for how long a given peer has been unreachable</td><td>If this duration is greater than 0, this could indicate how long a network partition has been occurring.</td></tr><tr><td><code>sys.host.net.send.tcp.retrans&#95;segs</code><br/></td><td>NOT AVAILABLE</td><td>The number of TCP segments retransmitted across all network interfaces. This can indicate packet loss occurring in the network. However, it can also be caused by recipient nodes not consuming packets in a timely manner, or the local node overflowing its outgoing buffers, for example due to overload.<br/><br/>Retransmissions also occur in the absence of problems, as modern TCP stacks err on the side of aggressively retransmitting segments.<br/><br/>The linux tool 'ss -i' can show the Linux kernel's smoothed view of round-trip latency and variance on a per-connection basis. Additionally, 'netstat -s' shows all TCP counters maintained by the kernel.</td><td>Phase changes, especially when occurring on groups of nodes, can indicate packet loss in the network or a slow consumer of packets. On slow consumers, the 'sys.host.net.rcvd.drop' metric may be elevated; on overloaded senders, it is worth checking the 'sys.host.net.send.drop' metric. Additionally, the 'sys.host.net.send.tcp.&#42;' may provide more insight into the specific type of retransmission.</td></tr></tbody></table>

## KV Distributed

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>distsender.errors.notleaseholder</code><br/></td><td><code>distsender.errors.notleaseholder</code></td><td>Number of NotLeaseHolderErrors encountered from replica-addressed RPCs</td><td>Errors of this type are normal during elastic cluster topology changes when leaseholders are actively rebalancing. They are automatically retried. However they may create occasional response time spikes. In that case, this metric may provide the explanation of the cause.</td></tr><tr><td><code>distsender.rpc.sent.nextreplicaerror</code><br/></td><td><code>distsender.rpc.sent.nextreplicaerror</code></td><td>Number of replica-addressed RPCs sent due to per-replica errors</td><td>RPC errors do not necessarily indicate a problem. This metric tracks remote procedure calls that return a status value other than "success". A non-success status of an RPC should not be misconstrued as a network transport issue. It is database code logic executed on another cluster node. The non-success status is a result of an orderly execution of an RPC that reports a specific logical condition.</td></tr></tbody></table>

## KV Replication

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>leases.transfers.success</code><br/></td><td><code>leases.transfers.success</code></td><td>Number of successful lease transfers</td><td>A high number of lease transfers is not a negative or positive signal, rather it is a reflection of the elastic cluster activities. For example, this metric is high during cluster topology changes. A high value is often the reason for NotLeaseHolderErrors which are normal and expected during rebalancing. Observing this metric may provide a confirmation of the cause of such errors.</td></tr><tr><td><code>liveness.heartbeatlatency</code><br/></td><td><code>liveness.heartbeatlatency</code></td><td>Node liveness heartbeat latency</td><td>If this metric exceeds 1 second, it is a sign of cluster instability.</td></tr><tr><td><code>liveness.livenodes</code><br/></td><td><code>liveness.livenodes</code></td><td>Number of live nodes in the cluster (will be 0 if this node is not itself live)</td><td>This is a critical metric that tracks the live nodes in the cluster.</td></tr><tr><td><code>queue.replicate.replacedecommissioningreplica.error</code><br/></td><td><code>queue.replicate.replacedecommissioningreplica.error.count</code></td><td>Number of failed decommissioning replica replacements processed by the replicate queue</td><td>Refer to Decommission the node.</td></tr><tr><td><code>range.merges</code><br/></td><td><code>range.merges.count</code></td><td>Number of range merges</td><td>This metric indicates how fast a workload is scaling down. Merges are Cockroach's optimization for performance. This metric indicates that there have been deletes in the workload.</td></tr><tr><td><code>range.splits</code><br/></td><td><code>range.splits.count</code></td><td>Number of range splits</td><td>This metric indicates how fast a workload is scaling up. Spikes can indicate resource hotspots since the split heuristic is based on QPS. To understand whether hotspots are an issue and with which tables and indexes they are occurring, correlate this metric with other metrics such as CPU usage, such as sys.cpu.combined.percent-normalized, or use the Hot Ranges page.</td></tr><tr><td><code>ranges</code><br/></td><td><code>ranges</code></td><td>Number of ranges</td><td>This metric provides a measure of the scale of the data size.</td></tr><tr><td><code>ranges.unavailable</code><br/></td><td><code>ranges.unavailable</code></td><td>Number of ranges with fewer live replicas than needed for quorum</td><td>This metric is an indicator of replication issues. It shows whether the cluster is unhealthy and can impact workload. If an entire range is unavailable, then it will be unable to process queries.</td></tr><tr><td><code>ranges.underreplicated</code><br/></td><td><code>ranges.underreplicated</code></td><td>Number of ranges with fewer live replicas than the replication target</td><td>This metric is an indicator of replication issues. It shows whether the cluster has data that is not conforming to resilience goals. The next step is to determine the corresponding database object, such as the table or index, of these under-replicated ranges and whether the under-replication is temporarily expected. Use the statement SELECT table&#95;name, index&#95;name FROM &#91;SHOW RANGES WITH INDEXES&#93; WHERE range&#95;id = &#123;id of under-replicated range&#125;;</td></tr><tr><td><code>rebalancing.cpunanospersecond</code><br/></td><td><code>rebalancing.cpunanospersecond</code></td><td>Average CPU nanoseconds spent on processing replica operations in the last 30 minutes.</td><td>A high value of this metric could indicate that one of the store's replicas is part of a hot range.</td></tr><tr><td><code>rebalancing.lease.transfers</code><br/></td><td><code>rebalancing.lease.transfers.count</code></td><td>Number of lease transfers motivated by store-level load imbalances</td><td>Used to identify when there has been more rebalancing activity triggered by imbalance between stores (of QPS or CPU). If this is high (when the count is rated), it indicates that more rebalancing activity is taking place due to load imbalance between stores.</td></tr><tr><td><code>rebalancing.queriespersecond</code><br/></td><td><code>rebalancing.queriespersecond</code></td><td>Number of kv-level requests received per second by the store, considering the last 30 minutes, as used in rebalancing decisions.</td><td>This metric shows hotspots along the queries per second (QPS) dimension. It provides insights into the ongoing rebalancing activities.</td></tr><tr><td><code>rebalancing.range.rebalances</code><br/></td><td><code>rebalancing.range.rebalances.count</code></td><td>Number of range rebalance operations motivated by store-level load imbalances</td><td>Used to identify when there has been more rebalancing activity triggered by imbalance between stores (of QPS or CPU). If this is high (when the count is rated), it indicates that more rebalancing activity is taking place due to load imbalance between stores.</td></tr><tr><td><code>rebalancing.replicas.cpunanospersecond</code><br/></td><td><code>rebalancing.replicas.cpunanospersecond.count</code></td><td>Histogram of average CPU nanoseconds spent on processing replica operations in the last 30 minutes.</td><td>A high value of this metric could indicate that one of the store's replicas is part of a hot range. See also the non-histogram variant: rebalancing.cpunanospersecond.</td></tr><tr><td><code>rebalancing.replicas.queriespersecond</code><br/></td><td><code>rebalancing.replicas.queriespersecond.count</code></td><td>Histogram of average kv-level requests received per second by replicas on the store in the last 30 minutes.</td><td>A high value of this metric could indicate that one of the store's replicas is part of a hot range. See also: rebalancing&#95;replicas&#95;cpunanospersecond.</td></tr><tr><td><code>replicas</code><br/></td><td><code>replicas</code></td><td>Number of replicas</td><td>This metric provides an essential characterization of the data distribution across cluster nodes.</td></tr><tr><td><code>replicas.leaseholders</code><br/></td><td><code>replicas.leaseholders</code></td><td>Number of lease holders</td><td>This metric provides an essential characterization of the data processing points across cluster nodes.</td></tr></tbody></table>

## SQL

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>jobs.auto&#95;create&#95;partial&#95;stats.currently&#95;paused</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs&#123;name: auto&#95;create&#95;partial&#95;stats, status: currently&#95;paused&#125;</code></td><td>NOT AVAILABLE</td><td>Number of auto&#95;create&#95;partial&#95;stats jobs currently considered Paused</td><td>This metric is a high-level indicator that automatically generated partial statistics jobs are paused which can lead to the query optimizer running with stale statistics. Stale statistics can cause suboptimal query plans to be selected leading to poor query performance.</td></tr><tr><td><code>jobs.auto&#95;create&#95;partial&#95;stats.currently&#95;running</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs&#123;type: auto&#95;create&#95;partial&#95;stats, status: currently&#95;running&#125;</code></td><td>NOT AVAILABLE</td><td>Number of auto&#95;create&#95;partial&#95;stats jobs currently running in Resume or OnFailOrCancel state</td><td>This metric tracks the number of active automatically generated partial statistics jobs that could also be consuming resources. Ensure that foreground SQL traffic is not impacted by correlating this metric with SQL latency and query volume metrics.</td></tr><tr><td><code>jobs.auto&#95;create&#95;partial&#95;stats.resume&#95;failed</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs.resume&#123;name: auto&#95;create&#95;partial&#95;stats, status: failed&#125;</code></td><td>NOT AVAILABLE</td><td>Number of auto&#95;create&#95;partial&#95;stats jobs which failed with a non-retriable error</td><td>This metric is a high-level indicator that automatically generated partial table statistics is failing. Failed statistic creation can lead to the query optimizer running with stale statistics. Stale statistics can cause suboptimal query plans to be selected leading to poor query performance.</td></tr><tr><td><code>sql.conn.failures</code><br/></td><td><code>sql.conn.failures.count</code></td><td>Number of SQL connection failures</td><td>This metric is incremented whenever a connection attempt fails for any reason, including timeouts.</td></tr><tr><td><code>sql.conn.latency</code><br/></td><td><code>sql.conn.latency</code></td><td>Latency to establish and authenticate a SQL connection</td><td>These metrics characterize the database connection latency which can affect the application performance, for example, by having slow startup times. Connection failures are not recorded in these metrics.</td></tr><tr><td><code>sql.conns</code><br/></td><td><code>sql.conns</code></td><td>Number of open SQL connections</td><td>This metric shows the number of connections as well as the distribution, or balancing, of connections across cluster nodes. An imbalance can lead to nodes becoming overloaded. Review Connection Pooling.</td></tr><tr><td><code>sql.ddl.count</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>sql.count&#123;query&#95;type: ddl&#125;</code></td><td><code>sql.ddl.count</code></td><td>Number of SQL DDL statements successfully executed</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the SQL Activity pages to investigate interesting outliers or patterns. For example, on the Transactions page and the Statements page, sort on the Execution Count column. To find problematic sessions, on the Sessions page, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td><code>sql.delete.count</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>sql.count&#123;query&#95;type: delete&#125;</code></td><td><code>sql.delete.count</code></td><td>Number of SQL DELETE statements successfully executed</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the SQL Activity pages to investigate interesting outliers or patterns. For example, on the Transactions page and the Statements page, sort on the Execution Count column. To find problematic sessions, on the Sessions page, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td><code>sql.distsql.contended&#95;queries.count</code><br/></td><td><code>sql.distsql.contended&#95;queries.count</code></td><td>Number of SQL queries that experienced contention</td><td>This metric is incremented whenever there is a non-trivial amount of contention experienced by a statement whether read-write or write-write conflicts. Monitor this metric to correlate possible workload performance issues to contention conflicts.</td></tr><tr><td><code>sql.failure.count</code><br/></td><td><code>sql.failure.count</code></td><td>Number of statements resulting in a planning or runtime error</td><td>This metric is a high-level indicator of workload and application degradation with query failures. Use the Insights page to find failed executions with their error code to troubleshoot or use application-level logs, if instrumented, to determine the cause of error.</td></tr><tr><td><code>sql.full.scan.count</code><br/></td><td><code>sql.full.scan.count</code></td><td>Number of full table or index scans</td><td>This metric is a high-level indicator of potentially suboptimal query plans in the workload that may require index tuning and maintenance. To identify the statements with a full table scan, use SHOW FULL TABLE SCAN or the SQL Activity Statements page with the corresponding metric time frame. The Statements page also includes explain plans and index recommendations. Not all full scans are necessarily bad especially over smaller tables.</td></tr><tr><td><code>sql.insert.count</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>sql.count&#123;query&#95;type: insert&#125;</code></td><td><code>sql.insert.count</code></td><td>Number of SQL INSERT statements successfully executed</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the SQL Activity pages to investigate interesting outliers or patterns. For example, on the Transactions page and the Statements page, sort on the Execution Count column. To find problematic sessions, on the Sessions page, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td><code>sql.mem.root.current</code><br/></td><td><code>sql.mem.root.current</code></td><td>Current sql statement memory usage for root</td><td>This metric shows how memory set aside for temporary materializations, such as hash tables and intermediary result sets, is utilized. Use this metric to optimize memory allocations based on long term observations. The maximum amount is set with --max&#95;sql&#95;memory. If the utilization of sql memory is persistently low, perhaps some portion of this memory allocation can be shifted to --cache.</td></tr><tr><td><code>sql.new&#95;conns</code><br/></td><td><code>sql.new&#95;conns.count</code></td><td>Number of SQL connections created</td><td>The rate of this metric shows how frequently new connections are being established. This can be useful in determining if a high rate of incoming new connections is causing additional load on the server due to a misconfigured application.</td></tr><tr><td><code>sql.routine.delete.count</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>sql.count&#123;query&#95;type: routine&#95;delete&#125;</code></td><td>NOT AVAILABLE</td><td>Number of SQL DELETE statements successfully executed within routine invocation</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the SQL Activity pages to investigate interesting outliers or patterns. For example, on the Transactions page and the Statements page, sort on the Execution Count column. To find problematic sessions, on the Sessions page, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td><code>sql.routine.insert.count</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>sql.count&#123;query&#95;type: routine&#95;insert&#125;</code></td><td>NOT AVAILABLE</td><td>Number of SQL INSERT statements successfully executed within routine invocation</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the SQL Activity pages to investigate interesting outliers or patterns. For example, on the Transactions page and the Statements page, sort on the Execution Count column. To find problematic sessions, on the Sessions page, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td><code>sql.routine.select.count</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>sql.count&#123;query&#95;type: routine&#95;select&#125;</code></td><td>NOT AVAILABLE</td><td>Number of SQL SELECT statements successfully executed within routine invocation</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the SQL Activity pages to investigate interesting outliers or patterns. For example, on the Transactions page and the Statements page, sort on the Execution Count column. To find problematic sessions, on the Sessions page, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td><code>sql.routine.update.count</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>sql.count&#123;query&#95;type: routine&#95;update&#125;</code></td><td>NOT AVAILABLE</td><td>Number of SQL UPDATE statements successfully executed within routine invocation</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the SQL Activity pages to investigate interesting outliers or patterns. For example, on the Transactions page and the Statements page, sort on the Execution Count column. To find problematic sessions, on the Sessions page, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td><code>sql.select.count</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>sql.count&#123;query&#95;type: select&#125;</code></td><td><code>sql.select.count</code></td><td>Number of SQL SELECT statements successfully executed</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the SQL Activity pages to investigate interesting outliers or patterns. For example, on the Transactions page and the Statements page, sort on the Execution Count column. To find problematic sessions, on the Sessions page, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td><code>sql.service.latency</code><br/></td><td><code>sql.service.latency</code></td><td>Latency of SQL request execution</td><td>These high-level metrics reflect workload performance. Monitor these metrics to understand latency over time. If abnormal patterns emerge, apply the metric's time range to the SQL Activity pages to investigate interesting outliers or patterns. The Statements page has P90 Latency and P99 latency columns to enable correlation with this metric.</td></tr><tr><td><code>sql.statements.active</code><br/></td><td><code>sql.statements.active</code></td><td>Number of currently active user SQL statements</td><td>This high-level metric reflects workload volume.</td></tr><tr><td><code>sql.txn.abort.count</code><br/></td><td><code>sql.txn.abort.count</code></td><td>Number of SQL transaction abort errors</td><td>This high-level metric reflects workload performance. A persistently high number of SQL transaction abort errors may negatively impact the workload performance and needs to be investigated.</td></tr><tr><td><code>sql.txn.begin.count</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>sql.count&#123;query&#95;type: begin&#125;</code></td><td><code>sql.txn.begin.count</code></td><td>Number of SQL transaction BEGIN statements successfully executed</td><td>This metric reflects workload volume by counting explicit transactions. Use this metric to determine whether explicit transactions can be refactored as implicit transactions (individual statements).</td></tr><tr><td><code>sql.txn.commit.count</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>sql.count&#123;query&#95;type: commit&#125;</code></td><td><code>sql.txn.commit.count</code></td><td>Number of SQL transaction COMMIT statements successfully executed</td><td>This metric shows the number of transactions that completed successfully. This metric can be used as a proxy to measure the number of successful explicit transactions.</td></tr><tr><td><code>sql.txn.latency</code><br/></td><td><code>sql.txn.latency</code></td><td>Latency of SQL transactions</td><td>These high-level metrics provide a latency histogram of all executed SQL transactions. These metrics provide an overview of the current SQL workload.</td></tr><tr><td><code>sql.txn.rollback.count</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>sql.count&#123;query&#95;type: rollback&#125;</code></td><td><code>sql.txn.rollback.count</code></td><td>Number of SQL transaction ROLLBACK statements successfully executed</td><td>This metric shows the number of orderly transaction rollbacks. A persistently high number of rollbacks may negatively impact the workload performance and needs to be investigated.</td></tr><tr><td><code>sql.txns.open</code><br/></td><td><code>sql.txns.open</code></td><td>Number of currently open user SQL transactions</td><td>This metric should roughly correspond to the number of cores &#42; 4. If this metric is consistently larger, scale out the cluster.</td></tr><tr><td><code>sql.update.count</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>sql.count&#123;query&#95;type: update&#125;</code></td><td><code>sql.update.count</code></td><td>Number of SQL UPDATE statements successfully executed</td><td>This high-level metric reflects workload volume. Monitor this metric to identify abnormal application behavior or patterns over time. If abnormal patterns emerge, apply the metric's time range to the SQL Activity pages to investigate interesting outliers or patterns. For example, on the Transactions page and the Statements page, sort on the Execution Count column. To find problematic sessions, on the Sessions page, sort on the Transaction Count column. Find the sessions with high transaction counts and trace back to a user or application.</td></tr><tr><td><code>txn.restarts.serializable</code><br/></td><td><code>txn.restarts.serializable</code></td><td>Number of restarts due to a forwarded commit timestamp and isolation=SERIALIZABLE</td><td>This metric is one measure of the impact of contention conflicts on workload performance. For guidance on contention conflicts, review transaction contention best practices and performance tuning recipes. Tens of restarts per minute may be a high value, a signal of an elevated degree of contention in the workload, which should be investigated.</td></tr><tr><td><code>txn.restarts.txnaborted</code><br/></td><td><code>txn.restarts.txnaborted.count</code></td><td>Number of restarts due to an abort by a concurrent transaction (usually due to deadlock)</td><td>The errors tracked by this metric are generally due to deadlocks. Deadlocks can often be prevented with a considered transaction design. Identify the conflicting transactions involved in the deadlocks, then, if possible, redesign the business logic implementation prone to deadlocks.</td></tr><tr><td><code>txn.restarts.txnpush</code><br/></td><td><code>txn.restarts.txnpush.count</code></td><td>Number of restarts due to a transaction push failure</td><td>This metric is one measure of the impact of contention conflicts on workload performance. For guidance on contention conflicts, review transaction contention best practices and performance tuning recipes. Tens of restarts per minute may be a high value, a signal of an elevated degree of contention in the workload, which should be investigated.</td></tr><tr><td><code>txn.restarts.unknown</code><br/></td><td><code>txn.restarts.unknown.count</code></td><td>Number of restarts due to a unknown reasons</td><td>This metric is one measure of the impact of contention conflicts on workload performance. For guidance on contention conflicts, review transaction contention best practices and performance tuning recipes. Tens of restarts per minute may be a high value, a signal of an elevated degree of contention in the workload, which should be investigated.</td></tr><tr><td><code>txn.restarts.writetooold</code><br/></td><td><code>txn.restarts.writetooold</code></td><td>Number of restarts due to a concurrent writer committing first</td><td>This metric is one measure of the impact of contention conflicts on workload performance. For guidance on contention conflicts, review transaction contention best practices and performance tuning recipes. Tens of restarts per minute may be a high value, a signal of an elevated degree of contention in the workload, which should be investigated.</td></tr><tr><td><code>txnwaitqueue.deadlocks&#95;total</code><br/></td><td><code>txnwaitqueue.deadlocks&#95;total.count</code></td><td>Number of deadlocks detected by the txn wait queue</td><td>Alert on this metric if its value is greater than zero, especially if transaction throughput is lower than expected. Applications should be able to detect and recover from deadlock errors. However, transaction performance and throughput can be maximized if the application logic avoids deadlock conditions in the first place, for example, by keeping transactions as short as possible.</td></tr></tbody></table>

## Table Statistics

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>jobs.auto&#95;create&#95;stats.currently&#95;paused</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs&#123;name: auto&#95;create&#95;stats, status: currently&#95;paused&#125;</code></td><td><code>jobs.auto&#95;create&#95;stats.currently&#95;paused</code></td><td>Number of auto&#95;create&#95;stats jobs currently considered Paused</td><td>This metric is a high-level indicator that automatically generated statistics jobs are paused which can lead to the query optimizer running with stale statistics. Stale statistics can cause suboptimal query plans to be selected leading to poor query performance.</td></tr><tr><td><code>jobs.auto&#95;create&#95;stats.currently&#95;running</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs&#123;type: auto&#95;create&#95;stats, status: currently&#95;running&#125;</code></td><td><code>jobs.auto&#95;create&#95;stats.currently&#95;running</code></td><td>Number of auto&#95;create&#95;stats jobs currently running in Resume or OnFailOrCancel state</td><td>This metric tracks the number of active automatically generated statistics jobs that could also be consuming resources. Ensure that foreground SQL traffic is not impacted by correlating this metric with SQL latency and query volume metrics.</td></tr><tr><td><code>jobs.auto&#95;create&#95;stats.resume&#95;failed</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs.resume&#123;name: auto&#95;create&#95;stats, status: failed&#125;</code></td><td><code>jobs.auto&#95;create&#95;stats.resume&#95;failed</code></td><td>Number of auto&#95;create&#95;stats jobs which failed with a non-retriable error</td><td>This metric is a high-level indicator that automatically generated table statistics is failing. Failed statistic creation can lead to the query optimizer running with stale statistics. Stale statistics can cause suboptimal query plans to be selected leading to poor query performance.</td></tr><tr><td><code>jobs.create&#95;stats.currently&#95;running</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs&#123;type: create&#95;stats, status: currently&#95;running&#125;</code></td><td><code>jobs.create&#95;stats.currently&#95;running</code></td><td>Number of create&#95;stats jobs currently running in Resume or OnFailOrCancel state</td><td>This metric tracks the number of active create statistics jobs that could also be consuming resources. Ensure that foreground SQL traffic is not impacted by correlating this metric with SQL latency and query volume metrics.</td></tr></tbody></table>

## Disaster Recovery

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>jobs.backup.currently&#95;paused</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs&#123;name: backup, status: currently&#95;paused&#125;</code></td><td><code>jobs.backup.currently&#95;paused</code></td><td>Number of backup jobs currently considered Paused</td><td>Monitor and alert on this metric to safeguard against an inadvertent operational error of leaving a backup job in a paused state for an extended period of time. In functional areas, a paused job can hold resources or have concurrency impact or some other negative consequence. Paused backup may break the recovery point objective (RPO).</td></tr><tr><td><code>jobs.backup.currently&#95;running</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs&#123;type: backup, status: currently&#95;running&#125;</code></td><td><code>jobs.backup.currently&#95;running</code></td><td>Number of backup jobs currently running in Resume or OnFailOrCancel state</td><td>See Description.</td></tr><tr><td><code>schedules.BACKUP.failed</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>schedules&#123;name: BACKUP, status: failed&#125;</code></td><td><code>schedules.BACKUP.failed</code></td><td>Number of BACKUP jobs failed</td><td>Monitor this metric and investigate backup job failures.</td></tr><tr><td><code>schedules.BACKUP.last-completed-time</code><br/></td><td><code>schedules.BACKUP.last-completed-time</code></td><td>The unix timestamp of the most recently completed backup by a schedule specified as maintaining this metric</td><td>Monitor this metric to ensure that backups are meeting the recovery point objective (RPO). Each node exports the time that it last completed a backup on behalf of the schedule. If a node is restarted, it will report 0 until it completes a backup. If all nodes are restarted, max() is 0 until a node completes a backup.<br/><br/>To make use of this metric, first, from each node, take the maximum over a rolling window equal to or greater than the backup frequency, and then take the maximum of those values across nodes. For example with a backup frequency of 60 minutes, monitor time() - max&#95;across&#95;nodes(max&#95;over&#95;time(schedules&#95;BACKUP&#95;last&#95;completed&#95;time, 60min)).</td></tr></tbody></table>

## Changefeeds

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>changefeed.commit&#95;latency</code><br/></td><td><code>changefeed.commit.latency</code></td><td>Event commit latency: a difference between event MVCC timestamp and the time it was acknowledged by the downstream sink. If the sink batches events, then the difference between the oldest event in the batch and acknowledgement is recorded; Excludes latency during backfill</td><td>This metric provides a useful context when assessing the state of changefeeds. This metric characterizes the end-to-end lag between a committed change and that change applied at the destination.</td></tr><tr><td><code>changefeed.emitted&#95;bytes</code><br/></td><td><code>changefeed.emitted&#95;bytes</code></td><td>Bytes emitted by all feeds</td><td>This metric provides a useful context when assessing the state of changefeeds. This metric characterizes the throughput bytes being streamed from the CockroachDB cluster.</td></tr><tr><td><code>changefeed.emitted&#95;messages</code><br/></td><td><code>changefeed.emitted&#95;messages</code></td><td>Messages emitted by all feeds</td><td>This metric provides a useful context when assessing the state of changefeeds. This metric characterizes the rate of changes being streamed from the CockroachDB cluster.</td></tr><tr><td><code>changefeed.error&#95;retries</code><br/></td><td><code>changefeed.error&#95;retries</code></td><td>Total retryable errors encountered by all changefeeds</td><td>This metric tracks transient changefeed errors. Alert on "too many" errors, such as 50 retries in 15 minutes. For example, during a rolling upgrade this counter will increase because the changefeed jobs will restart following node restarts. There is an exponential backoff, up to 10 minutes. But if there is no rolling upgrade in process or other cluster maintenance, and the error rate is high, investigate the changefeed job.</td></tr><tr><td><code>changefeed.failures</code><br/></td><td><code>changefeed.failures</code></td><td>Total number of changefeed jobs which have failed</td><td>This metric tracks the permanent changefeed job failures that the jobs system will not try to restart. Any increase in this counter should be investigated. An alert on this metric is recommended.</td></tr><tr><td><code>changefeed.running</code><br/></td><td><code>changefeed.running</code></td><td>Number of currently running changefeeds, including sinkless</td><td>This metric tracks the total number of all running changefeeds.</td></tr><tr><td><code>jobs.changefeed.currently&#95;paused</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs&#123;name: changefeed, status: currently&#95;paused&#125;</code></td><td><code>jobs.changefeed.currently&#95;paused</code></td><td>Number of changefeed jobs currently considered Paused</td><td>Monitor and alert on this metric to safeguard against an inadvertent operational error of leaving a changefeed job in a paused state for an extended period of time. Changefeed jobs should not be paused for a long time because the protected timestamp prevents garbage collection.</td></tr><tr><td><code>jobs.changefeed.protected&#95;age&#95;sec</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs.protected&#95;age&#95;sec&#123;type: changefeed&#125;</code></td><td><code>jobs.changefeed.protected&#95;age&#95;sec</code></td><td>The age of the oldest PTS record protected by changefeed jobs</td><td>Changefeeds use protected timestamps to protect the data from being garbage collected. Ensure the protected timestamp age does not significantly exceed the GC TTL zone configuration. Alert on this metric if the protected timestamp age is greater than 3 times the GC TTL.</td></tr></tbody></table>

## Row-level TTL

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>jobs.row&#95;level&#95;ttl.currently&#95;paused</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs&#123;name: row&#95;level&#95;ttl, status: currently&#95;paused&#125;</code></td><td><code>jobs.row&#95;level&#95;ttl.currently&#95;paused</code></td><td>Number of row&#95;level&#95;ttl jobs currently considered Paused</td><td>Monitor this metric to ensure the Row Level TTL job does not remain paused inadvertently for an extended period.</td></tr><tr><td><code>jobs.row&#95;level&#95;ttl.currently&#95;running</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs&#123;type: row&#95;level&#95;ttl, status: currently&#95;running&#125;</code></td><td><code>jobs.row&#95;level&#95;ttl.currently&#95;running</code></td><td>Number of row&#95;level&#95;ttl jobs currently running in Resume or OnFailOrCancel state</td><td>Monitor this metric to ensure there are not too many Row Level TTL jobs running at the same time. Generally, this metric should be in the low single digits.</td></tr><tr><td><code>jobs.row&#95;level&#95;ttl.delete&#95;duration</code><br/></td><td><code>jobs.row&#95;level&#95;ttl.delete&#95;duration.count</code></td><td>Duration for delete requests during row level TTL.</td><td>See Description.</td></tr><tr><td><code>jobs.row&#95;level&#95;ttl.num&#95;active&#95;spans</code><br/></td><td><code>jobs.row&#95;level&#95;ttl.num&#95;active&#95;spans</code></td><td>Number of active spans the TTL job is deleting from.</td><td>See Description.</td></tr><tr><td><code>jobs.row&#95;level&#95;ttl.resume&#95;completed</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs.resume&#123;name: row&#95;level&#95;ttl, status: completed&#125;</code></td><td><code>jobs.row&#95;level&#95;ttl.resume&#95;completed.count</code></td><td>Number of row&#95;level&#95;ttl jobs which successfully resumed to completion</td><td>If Row Level TTL is enabled, this metric should be nonzero and correspond to the ttl&#95;cron setting that was chosen. If this metric is zero, it means the job is not running</td></tr><tr><td><code>jobs.row&#95;level&#95;ttl.resume&#95;failed</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>jobs.resume&#123;name: row&#95;level&#95;ttl, status: failed&#125;</code></td><td><code>jobs.row&#95;level&#95;ttl.resume&#95;failed.count</code></td><td>Number of row&#95;level&#95;ttl jobs which failed with a non-retriable error</td><td>This metric should remain at zero. Repeated errors means the Row Level TTL job is not deleting data.</td></tr><tr><td><code>jobs.row&#95;level&#95;ttl.rows&#95;deleted</code><br/></td><td><code>jobs.row&#95;level&#95;ttl.rows&#95;deleted.count</code></td><td>Number of rows deleted by the row level TTL job.</td><td>Correlate this metric with the metric jobs.row&#95;level&#95;ttl.rows&#95;selected to ensure all the rows that should be deleted are actually getting deleted.</td></tr><tr><td><code>jobs.row&#95;level&#95;ttl.rows&#95;selected</code><br/></td><td><code>jobs.row&#95;level&#95;ttl.rows&#95;selected.count</code></td><td>Number of rows selected for deletion by the row level TTL job.</td><td>Correlate this metric with the metric jobs.row&#95;level&#95;ttl.rows&#95;deleted to ensure all the rows that should be deleted are actually getting deleted.</td></tr><tr><td><code>jobs.row&#95;level&#95;ttl.select&#95;duration</code><br/></td><td><code>jobs.row&#95;level&#95;ttl.select&#95;duration.count</code></td><td>Duration for select requests during row level TTL.</td><td>See Description.</td></tr><tr><td><code>jobs.row&#95;level&#95;ttl.span&#95;total&#95;duration</code><br/></td><td><code>jobs.row&#95;level&#95;ttl.span&#95;total&#95;duration.count</code></td><td>Duration for processing a span during row level TTL.</td><td>See Description.</td></tr><tr><td><code>jobs.row&#95;level&#95;ttl.total&#95;expired&#95;rows</code><br/></td><td><code>jobs.row&#95;level&#95;ttl.total&#95;expired&#95;rows</code></td><td>Approximate number of rows that have expired the TTL on the TTL table.</td><td>See Description.</td></tr><tr><td><code>jobs.row&#95;level&#95;ttl.total&#95;rows</code><br/></td><td><code>jobs.row&#95;level&#95;ttl.total&#95;rows</code></td><td>Approximate number of rows on the TTL table.</td><td>See Description.</td></tr><tr><td><code>schedules.scheduled-row-level-ttl-executor.failed</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>schedules&#123;name: scheduled-row-level-ttl-executor, status: failed&#125;</code></td><td><code>schedules.scheduled&#95;row&#95;level&#95;ttl&#95;executor.failed.count</code></td><td>Number of scheduled-row-level-ttl-executor jobs failed</td><td>Monitor this metric to ensure the Row Level TTL job is running. If it is non-zero, it means the job could not be created.</td></tr></tbody></table>

## Physical Replication

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>physical&#95;replication.logical&#95;bytes</code><br/></td><td><code>physical&#95;replication.logical&#95;bytes.count</code></td><td>Logical bytes (sum of keys + values) ingested by all replication jobs</td><td>Track PCR throughput</td></tr><tr><td><code>physical&#95;replication.replicated&#95;time&#95;seconds</code><br/></td><td><code>physical&#95;replication.replicated&#95;time&#95;seconds</code></td><td>The replicated time of the physical replication stream in seconds since the unix epoch.</td><td>Track replication lag via current time - physical&#95;replication.replicated&#95;time&#95;seconds</td></tr></tbody></table>

## Logical Replication

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>logical&#95;replication.commit&#95;latency</code><br/></td><td>NOT AVAILABLE</td><td>Event commit latency: a difference between event MVCC timestamp and the time it was flushed into disk. If we batch events, then the difference between the oldest event in the batch and flush is recorded</td><td>track the latency of of applying events from source to destination</td></tr><tr><td><code>logical&#95;replication.events&#95;dlqed</code><br/></td><td>NOT AVAILABLE</td><td>Row update events sent to DLQ</td><td>track events sent to the dead letter queue</td></tr><tr><td><code>logical&#95;replication.events&#95;ingested</code><br/></td><td>NOT AVAILABLE</td><td>Events ingested by all replication jobs</td><td>track events (e.g. updates, deletes, inserts) ingested</td></tr><tr><td><code>logical&#95;replication.logical&#95;bytes</code><br/></td><td>NOT AVAILABLE</td><td>Logical bytes (sum of keys + values) received by all replication jobs</td><td>track logical data replication throughput</td></tr><tr><td><code>logical&#95;replication.replicated&#95;time&#95;seconds</code><br/></td><td>NOT AVAILABLE</td><td>The replicated time of the logical replication stream in seconds since the unix epoch.</td><td>Track replication lag via current time - logical&#95;replication.replicated&#95;time&#95;seconds</td></tr></tbody></table>

## Expiration of license and certificates

<table><thead><tr><th>CockroachDB Metric Name</th><th><a href="https://docs.datadoghq.com/integrations/cockroachdb?tab=host#metrics">Datadog Integration Metric Name</a><br/>(add <code>cockroachdb.</code> prefix)</th><th>Description</th><th>Usage</th></tr></thead><tbody><tr><td><code>seconds.until.enterprise.license.expiry</code><br/></td><td><code>seconds.until.enterprise.license.expiry</code></td><td>Seconds until enterprise license expiry (0 if no license present or running without enterprise features)</td><td>See Description.</td></tr><tr><td><code>security.certificate.expiration.ca</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>security.certificate.expiration&#123;certificate&#95;type=ca&#125;</code></td><td><code>security.certificate.expiration.ca</code></td><td>Expiration for the CA certificate. 0 means no certificate or error.</td><td>See Description.</td></tr><tr><td><code>security.certificate.expiration.client-ca</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>security.certificate.expiration&#123;certificate&#95;type=client-ca&#125;</code></td><td><code>security.certificate.expiration.client-ca</code></td><td>Expiration for the client CA certificate. 0 means no certificate or error.</td><td>See Description.</td></tr><tr><td><code>security.certificate.expiration.client</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>security.certificate.expiration&#123;certificate&#95;type=client&#125;</code></td><td><code>security.certificate.expiration.client</code></td><td>Minimum expiration for client certificates, labeled by SQL user. 0 means no certificate or error.</td><td>See Description.</td></tr><tr><td><code>security.certificate.expiration.ui-ca</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>security.certificate.expiration&#123;certificate&#95;type=ui-ca&#125;</code></td><td><code>security.certificate.expiration.ui-ca</code></td><td>Expiration for the UI CA certificate. 0 means no certificate or error.</td><td>See Description.</td></tr><tr><td><code>security.certificate.expiration.node</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>security.certificate.expiration&#123;certificate&#95;type=node&#125;</code></td><td><code>security.certificate.expiration.node</code></td><td>Expiration for the node certificate. 0 means no certificate or error.</td><td>See Description.</td></tr><tr><td><code>security.certificate.expiration.node-client</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>security.certificate.expiration&#123;certificate&#95;type=node-client&#125;</code></td><td><code>security.certificate.expiration.node-client</code></td><td>Expiration for the node's client certificate. 0 means no certificate or error.</td><td>See Description.</td></tr><tr><td><code>security.certificate.expiration.ui</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>security.certificate.expiration&#123;certificate&#95;type=ui&#125;</code></td><td><code>security.certificate.expiration.ui</code></td><td>Expiration for the UI certificate. 0 means no certificate or error.</td><td>See Description.</td></tr><tr><td><code>security.certificate.expiration.ca-client-tenant</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>security.certificate.expiration&#123;certificate&#95;type=ca-client-tenant&#125;</code></td><td><code>security.certificate.expiration.ca-client-tenant</code></td><td>Expiration for the Tenant Client CA certificate. 0 means no certificate or error.</td><td>See Description.</td></tr><tr><td><code>security.certificate.expiration.client-tenant</code><br/><br/><a href="/docs/v25.4/prometheus-endpoint#metrics"><code>metrics</code> endpoint</a>:<br/><code>security.certificate.expiration&#123;certificate&#95;type=client-tenant&#125;</code></td><td><code>security.certificate.expiration.client-tenant</code></td><td>Expiration for the Tenant Client certificate. 0 means no certificate or error.</td><td>See Description.</td></tr></tbody></table>

## See also

- [Available Metrics](/docs/v25.4/metrics#available-metrics)
- [Monitor CockroachDB with Prometheus](/docs/v25.4/monitor-cockroachdb-with-prometheus)
- [Visualize metrics in Grafana](/docs/v25.4/monitor-cockroachdb-with-prometheus#step-5-visualize-metrics-in-grafana)
- [Custom Chart Debug Page](/docs/v25.4/ui-custom-chart-debug-page)
- [Cluster API](/docs/v25.4/cluster-api)
- [Essential Alerts](/docs/v25.4/essential-alerts-self-hosted)
